--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is reference code for how to set up and deploy a node-mongodb application with heroku and mLab",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node --inspect --presets env index.js"
+    "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./npm-debug.log --copy-files",
+    "start": "npm run build && node dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -23,11 +24,14 @@
   },
   "homepage": "https://github.com/umeshkulkarni25/heroku-mongodb-setup#readme",
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
     "express": "^4.16.3",
     "mongoose": "^5.3.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0"
+    "babel-preset-env": "^1.7.0",
+    "rimraf": "^2.6.2"
   }
 }
